# HERoEHS-ERICA-Operation

erica_action_script_player/: CMakeLists.txt  package.xml
erica_action_script_player/script/: action_script.yaml  erica_action_script.yaml
erica_action_script_player/src/: action_script_player.cpp
erica_decision/: CMakeLists.txt  package.xml
erica_decision/include/erica_decision/: erica_decision_node.h
erica_decision/launch/: erica_decision.launch  erica_decision_simulation.launch
erica_decision/src/: erica_decision_node.cpp  erica_decision_node.cpp.save
erica_gui/: CMakeLists.txt  mainpage.dox  package.xml
erica_gui-build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  erica_gui.cbp
erica_gui-build/catkin_generated/: generate_cached_setup.py  ordered_paths.cmake  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
erica_gui-build/catkin_generated/installspace/: erica_gui.pc  erica_guiConfig.cmake
erica_gui-build/catkin_generated/stamps/erica_gui/: package.xml.stamp
erica_gui-build/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
erica_gui-build/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gmock.cbp
erica_gui-build/gtest/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
erica_gui-build/include/erica_gui/: moc_main_window.cxx_parameters  moc_qnode.cxx_parameters
erica_gui/include/erica_gui/: main_window.hpp  qnode.hpp
erica_gui/launch/: operation_manager.launch
erica_gui/src/: main.cpp  main_window.cpp  qnode.cpp
erica_gui/ui/: main_window.ui
(+2 files in other folders)
