<?xml version="1.0"?>
<package format="2">
  <name>erica_action_script_player</name>
  <version>0.0.0</version>
  <description>The erica_action_script_player package</description>

  <maintainer email="jay@todo.todo">jay</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>robotis_controller_msgs</depend>
  <depend>erica_action_module_msgs</depend>
  <depend>boost</depend>
  <depend>yaml-cpp</depend>

</package>
